Fixed alignment of comment icon and count

--- a/src/Issue.css
+++ b/src/Issue.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items:flex-start;
+    flex-wrap: wrap;
     padding-left: .7rem;
     padding-right: .7rem;
     line-height: .2rem;
@@ -59,13 +60,14 @@
 .Issue-commentsSection{
     flex-direction: row;
     flex-grow: .5;
-    align-self: flex-end;
+    align-self: flex-start;
     line-height: 3rem;
     text-align: right;
+    font-size: .85rem;
 }
 
 .Issue-commentsSection svg{
-    transform: translateY(-.4rem);
+    transform: translateY(.1rem);
     padding-right: .1rem;
 }
 
